--- a/Dissertation/MandelbrotApp/Resources/Layout/Main.axml
+++ b/Dissertation/MandelbrotApp/Resources/Layout/Main.axml
@@ -14,6 +14,24 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/maxIterations" />
+    <RadioGroup
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/radioGroup1">
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="Cloud Computation"
+            android:id="@+id/cloudComputation" />
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Local Computation"
+            android:id="@+id/localComputation" />
+    </RadioGroup>
     <Button
         android:id="@+id/MyButton"
         android:layout_width="fill_parent"
